# AlekSIS-App-Untis

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
aleksis/apps/untis/: __init__.py  apps.py  forms.py  menus.py  model_extensions.py  models.py  preferences.py  rules.py  settings.py  tasks.py  urls.py  util.py  views.py
aleksis/apps/untis/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/untis/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/untis/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/untis/locale/la/LC_MESSAGES/: django.po
aleksis/apps/untis/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/untis/management/commands/: untis_import.py  untis_import_mysql.py  untis_import_mysql_all.py  untis_import_mysql_current_future.py  untis_import_mysql_current_next.py  untis_import_mysql_future.py
aleksis/apps/untis/migrations/: 0001_initial.py  0002_auto_20200820_1542.py
aleksis/apps/untis/templates/untis/: groups_child_groups.html  groups_subjects.html  untis_import.html  xml_import.html
aleksis/apps/untis/util/mysql/: api.py  api_helper.py  events.py  main.py  schoolapps_util.py  util.py
aleksis/apps/untis/util/mysql/importers/: absences.py  common_data.py  events.py  holidays.py  lessons.py  substitutions.py  terms.py
aleksis/apps/untis/util/xml/: xml.py
biscuit/apps/untis/: __init__.py  apps.py  forms.py  menus.py  urls.py  util.py  views.py
biscuit/apps/untis/locale/ar/LC_MESSAGES/: django.po
biscuit/apps/untis/locale/de_DE/LC_MESSAGES/: django.po
biscuit/apps/untis/locale/fr/LC_MESSAGES/: django.po
biscuit/apps/untis/locale/nb_NO/LC_MESSAGES/: django.po
biscuit/apps/untis/locale/tr_TR/LC_MESSAGES/: django.po
biscuit/apps/untis/management/commands/: untis_import.py
biscuit/apps/untis/templates/untis/: untis_import.html
