[tool.poetry]
name = "BiscuIT-App-Untis"
version = "1.0a4.dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"

description = "AlekSIS School Information System (SIS) - App for Untis import"
authors = ["Dominik George <dominik.george@teckids.org>", "Julian Leucker <leuckeju@katharineum.de>", "Frank Poetzsch-Heffter <p-h@katharineum.de>", "Jonathan Weth <wethjo@katharineum.de>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/BiscuIT/BiscuIT-App-Untis"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../.." }
BiscuIT-App-Chronos = { path = "../BiscuIT-App-Chronos" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
